types/mission/GraphType: Fix Java9+ deprecation for new Integer.